# web-crawler

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml  setup.py
crawler/: argparse.py  logger.py  multi_crawler.py  web_crawler.py
crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crawler/exporters/: base_exporter.py  console_exporter.py  consts.py  factory.py  tsv_exporter.py
crawler/url/: item.py  manager.py
scripts/: format_and_lint.py
